[package]
name = "cargo-rustc-cfg"
description = "Runs the `cargo rustc -- --print cfg` command and parses the output"
version = "0.1.0"
authors = ["Christopher Field <cfield2@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/volks73/cargo-rustc-cfg"
documentation = "https://docs.rs/cargo-rustc-cfg"
categories = ["development-tools"]
keywords = ["cargo", "rustc", "configuration", "commands"]
homepage = "https://github.com/volks73/cargo-rustc-cfg"
readme = "README.md"
edition = "2018"
exclude = ["/.github"]

[dependencies]

[badges]
is-it-maintained-issue-resolution = { repository = "volks73/cargo-rustc-cfg" }
is-it-maintained-open-issues = { repository = "volks73/cargo-rustc-cfg" }
